--- a/projects.html
+++ b/projects.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/script.js" defer></script>
 </head>
+
 <body class="dark-mode">
     <header class="sticky">
         <nav class="navbar">
@@ -32,39 +34,87 @@
     </header>
 
     <main>
-        <section class="projects">
-            <h2>My Projects</h2>
-            <div class="project-grid">
-                <div class="project-card">
-                    <img src="images/project1.jpg" alt="Project 1">
-                    <div class="project-card-content">
-                        <h3>Task Manager App</h3>
-                        <p>A web-based task manager built with HTML, CSS, and JavaScript.</p>
-                        <a href="#">View Project</a>
+
+        <section class="projects-grid">
+            <div class="project-card">
+                <img src="images/project1.png" alt="Project 1 Screenshot" class="project-image" />
+                <div class="project-info">
+                    <h3 class="project-title">SecureVault</h3>
+                    <p class="project-description">A password manager built with JavaScript and Node.js, using AES
+                        encryption.</p>
+                    <div class="project-tags">
+                        <span class="tag">JavaScript</span>
+                        <span class="tag">Node.js</span>
+                        <span class="tag">Cybersecurity</span>
                     </div>
-                </div>
-                <div class="project-card">
-                    <img src="images/project2.jpg" alt="Project 2">
-                    <div class="project-card-content">
-                        <h3>E-Commerce Website</h3>
-                        <p>A responsive e-commerce platform with product filtering.</p>
-                        <a href="#">View Project</a>
-                    </div>
-                </div>
-                <div class="project-card">
-                    <img src="images/project3.jpg" alt="Project 3">
-                    <div class="project-card-content">
-                        <h3>Weather App</h3>
-                        <p>A weather forecasting app using a public API.</p>
-                        <a href="#">View Project</a>
+                    <div class="project-links">
+                        <a href="https://github.com/abhay/SecureVault" target="_blank" class="btn">GitHub</a>
+                        <a href="https://securevault.live" target="_blank" class="btn">Live Demo</a>
                     </div>
                 </div>
             </div>
+
+            <div class="project-card">
+                <img src="images/project2.png" alt="Project 1 Screenshot" class="project-image" />
+                <div class="project-info">
+                    <h3 class="project-title">portfolio-web</h3>
+                    <p class="project-description">A password manager built with JavaScript and Node.js, using AES
+                        encryption.</p>
+                    <div class="project-tags">
+                        <span class="tag">JavaScript</span>
+                        <span class="tag">Node.js</span>
+                        <span class="tag">Cybersecurity</span>
+                    </div>
+                    <div class="project-links">
+                        <a href="https://github.com/abhay/SecureVault" target="_blank" class="btn">GitHub</a>
+                        <a href="https://securevault.live" target="_blank" class="btn">Live Demo</a>
+                    </div>
+                </div>
+            </div>
+            <div class="project-card">
+                <img src="images/project1.png" alt="Project 1 Screenshot" class="project-image" />
+                <div class="project-info">
+                    <h3 class="project-title">SecureVault</h3>
+                    <p class="project-description">A password manager built with JavaScript and Node.js, using AES
+                        encryption.</p>
+                    <div class="project-tags">
+                        <span class="tag">JavaScript</span>
+                        <span class="tag">Node.js</span>
+                        <span class="tag">Cybersecurity</span>
+                    </div>
+                    <div class="project-links">
+                        <a href="https://github.com/abhay/SecureVault" target="_blank" class="btn">GitHub</a>
+                        <a href="https://securevault.live" target="_blank" class="btn">Live Demo</a>
+                    </div>
+                </div>
+            </div>
+            <div class="project-card">
+                <img src="images/project1.png" alt="Project 1 Screenshot" class="project-image" />
+                <div class="project-info">
+                    <h3 class="project-title">SecureVault</h3>
+                    <p class="project-description">A password manager built with JavaScript and Node.js, using AES
+                        encryption.</p>
+                    <div class="project-tags">
+                        <span class="tag">JavaScript</span>
+                        <span class="tag">Node.js</span>
+                        <span class="tag">Cybersecurity</span>
+                    </div>
+                    <div class="project-links">
+                        <a href="https://github.com/abhay/SecureVault" target="_blank" class="btn">GitHub</a>
+                        <a href="https://securevault.live" target="_blank" class="btn">Live Demo</a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Repeat project-card divs for more projects -->
         </section>
+
+
     </main>
 
     <footer>
-        <p>&copy; 2025 Abhay Srivastava. All rights reserved.</p>
+        <p>&copy; 2024 Abhay Srivastava. All rights reserved.</p>
     </footer>
 </body>
+
 </html>
