added updated resume

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <p class="hero-cta">🚀 Open to internships and collaborations. Let's build the future together.</p>
       <div class="hero-buttons">
         <a href="#contact" class="btn">Let's Connect</a>
-        <a href="resume.html" class="btn secondary">Download Resume</a>
+        <a href="resume.html" class="btn secondary">My Resume</a>
       </div>
     </div>
   </section>
@@ -61,8 +61,9 @@
   <section id="skills" class="skills">
     <h2>Skills</h2>
     <div class="skills-grid">
-      <div class="skill-card">C++</div>
       <div class="skill-card">Python</div>
+      <div class="skill-card">java</div>
+      <div class="skill-card">C</div>
       <div class="skill-card">JavaScript</div>
       <div class="skill-card">HTML & CSS</div>
       <div class="skill-card">SQL</div>
