--- a/projects.html
+++ b/projects.html
@@ -36,12 +36,13 @@
     <main>
 
         <section class="projects-grid">
+            <!-- project 1  -->
             <div class="project-card">
                 <img src="images/project1.png" alt="Project 1 Screenshot" class="project-image" />
                 <div class="project-info">
-                    <h3 class="project-title">SecureVault</h3>
-                    <p class="project-description">A password manager built with JavaScript and Node.js, using AES
-                        encryption.</p>
+                    <h3 class="project-title">Vertual Assistant</h3>
+                    <p class="project-description">An intelligent AI assistant with a 3D web interface using WebGL and
+                        Three.js.</p>
                     <div class="project-tags">
                         <span class="tag">JavaScript</span>
                         <span class="tag">Node.js</span>
@@ -57,7 +58,7 @@
             <div class="project-card">
                 <img src="images/project2.png" alt="Project 1 Screenshot" class="project-image" />
                 <div class="project-info">
-                    <h3 class="project-title">portfolio-web</h3>
+                    <h3 class="project-title">Portfolio-web</h3>
                     <p class="project-description">A password manager built with JavaScript and Node.js, using AES
                         encryption.</p>
                     <div class="project-tags">
@@ -91,9 +92,13 @@
             <div class="project-card">
                 <img src="images/project1.png" alt="Project 1 Screenshot" class="project-image" />
                 <div class="project-info">
-                    <h3 class="project-title">SecureVault</h3>
-                    <p class="project-description">A password manager built with JavaScript and Node.js, using AES
-                        encryption.</p>
+                    <h3 class="project-title">NeoAssist</h3>
+                    <p class="project-description">Building a Python-based AI assistant capable of controlling
+                        applications, managing tasks,
+                        sending emails, executing voice/text commands, setting reminders, controlling music,
+                        and managing networks. <br>
+                    Integrated autonomous agents for tasks
+                    </p>
                     <div class="project-tags">
                         <span class="tag">JavaScript</span>
                         <span class="tag">Node.js</span>
