--- a/resume.html
+++ b/resume.html
@@ -32,18 +32,89 @@
     </header>
 
     <main>
-        <section class="resume">
-            <h2>My Resume</h2>
-            <div class="resume-content">
-                <p>B.Tech Computer Science and Engineering</p>
-                <p>Experienced in web development, problem-solving, and building scalable applications.</p>
-                <a href="images/resume.pdf" download class="btn">Download Resume</a>
-            </div>
-        </section>
+<section id="resume" class="resume-section">
+    <h2 class="section-title">My Resume</h2>
+    <div class="resume-container">
+      <div class="resume-left">
+        <div class="resume-block" data-aos="fade-up">
+          <h3><i class="fas fa-user-graduate"></i> Education</h3>
+          <ul>
+            <li>
+              <strong>B.Tech in CSE (Cybersecurity)</strong><br />
+              Shri Ramswaroop Memorial University, Lucknow<br />
+              <span class="year">2022 – 2026</span>
+            </li>
+          </ul>
+        </div>
+
+        <div class="resume-block" data-aos="fade-up" data-aos-delay="100">
+          <h3><i class="fas fa-cogs"></i> Skills</h3>
+          <ul class="skill-list">
+            <li>Python (Advanced), Java, C</li>
+            <li>HTML, CSS, JavaScript, React.js, Three.js</li>
+            <li>FastAPI, REST APIs</li>
+            <li>Git, Linux (Ubuntu, Kali), VS Code</li>
+            <li>IAM, Ethical Hacking, Vulnerability Management</li>
+            <li>NLP, AI Agents, Autonomous Systems</li>
+          </ul>
+        </div>
+
+        <div class="resume-block" data-aos="fade-up" data-aos-delay="200">
+          <h3><i class="fas fa-certificate"></i> Certifications</h3>
+          <ul>
+            <li>IBM Cloud Essentials V3 – IBM / SRMCEM (Apr 2025)</li>
+            <li>Identity and Access Management – IBM / SRMCEM (Apr 2025)</li>
+            <li>Cybersecurity Fundamentals – IBM (May 2024)</li>
+            <li>Mastering Kali Linux for Ethical Hackers – Udemy (Mar 2024)</li>
+            <li>Design Thinking – TCS (Feb 2023)</li>
+            <li>Cyber Awareness – Skill India / Tech Mahindra (May 2024)</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="resume-right">
+        <div class="resume-block" data-aos="fade-left">
+          <h3><i class="fas fa-briefcase"></i> Experience</h3>
+          <ul>
+            <li>
+              <strong>Frontend Developer Intern</strong><br />
+              Skill Zee | Jun 2024 – Aug 2024<br />
+              <span>Built TODO App, Calculator & Landing Pages using HTML, CSS, JS</span>
+            </li>
+          </ul>
+        </div>
+
+        <div class="resume-block" data-aos="fade-left" data-aos-delay="100">
+          <h3><i class="fas fa-project-diagram"></i> Projects</h3>
+          <ul>
+            <li><strong>NeoAssist</strong> – Smart AI Assistant using NLP, FastAPI, Automation</li>
+            <li><strong>3D AI Assistant</strong> – Autonomous agent-based system with Three.js + Python</li>
+            <li><strong>Encryption Tool</strong> – Caesar Cipher-based CLI in Python</li>
+            <li><strong>Portfolio Website</strong> – Fully responsive HTML/CSS/JS showcase</li>
+          </ul>
+        </div>
+
+        <div class="resume-block" data-aos="fade-left" data-aos-delay="200">
+          <h3><i class="fas fa-user-friends"></i> Leadership & Achievements</h3>
+          <ul>
+            <li>Coordinator – Smart India Hackathon (SIH) 2024, SRMU</li>
+            <li>Managed mentor engagement, team logistics & innovation facilitation</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <div class="download-resume" data-aos="zoom-in">
+      <a href="images\ABHAYSRIVASTAVAresume.pdf" class="btn" download>
+        <i class="fas fa-download"></i> Download PDF Resume
+      </a>
+    </div>
     </main>
 
     <footer>
         <p>&copy; 2024 Abhay Srivastava. All rights reserved.</p>
     </footer>
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+
 </body>
 </html>
