--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Contact Abhay Srivastava">
     <title>Contact - Abhay Srivastava</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/style.css">
     <script src="js/script.js" defer></script>
 </head>
 <body class="dark-mode">
@@ -32,16 +32,58 @@
     </header>
 
     <main>
-        <section class="contact">
-            <h2>Contact Me</h2>
-            <form action="https://formspree.io/f/your-form-id" method="POST">
-                <input type="text" name="name" placeholder="Your Name" required>
-                <input type="email" name="email" placeholder="Your Email" required>
-                <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
-                <button type="submit" class="btn">Send Message</button>
-            </form>
-        </section>
+<section class="contact-wrapper">
+  <div class="contact-intro">
+    <h1 class="typewriter">Let’s build something great together!</h1>
+    <p>I'm always open to collaboration, internships, or a good tech chat ☕</p>
+  </div>
+
+  <div class="contact-content">
+    <!-- Left Side Info -->
+    <div class="contact-info-glass" data-aos="fade-right">
+      <h2>Contact Info</h2>
+      <ul>
+        <li><i class="fas fa-envelope"></i> <a href="mailto:abhaysrivastava9@proton.me">abhaysrivastava9@proton.me</a></li>
+        <li><i class="fas fa-phone-alt"></i> <a href="tel:+919369039149">+91 9369039149</a></li>
+        <li><i class="fas fa-map-marker-alt"></i> Lucknow, India</li>
+      </ul>
+      <div class="social-buttons">
+  <a href="https://linkedin.com/in/srivastavabhay" target="_blank" class="btn-social linkedin">
+    <i class="fab fa-linkedin"></i> LinkedIn
+  </a>
+  <a href="https://github.com/abhay-0912" target="_blank" class="btn-social github">
+    <i class="fab fa-github"></i> GitHub
+  </a>
+  <a href="mailto:abhaysrivastava9@proton.me" class="btn-social email">
+    <i class="fas fa-envelope"></i> Email
+  </a>
+  <a href="https://twitter.com/your_twitter" target="_blank" class="btn-social twitter">
+    <i class="fab fa-twitter"></i> Twitter
+  </a>
+  <a href="https://instagram.com/your_instagram" target="_blank" class="btn-social instagram">
+    <i class="fab fa-instagram"></i> Instagram
+  </a>
+  <a href="resume.html" class="btn-social resume">
+    <i class="fas fa-file-alt"></i> Resume
+  </a>
+</div>
+
+    </div>
+
+    <!-- Contact Form -->
+    <form class="contact-form-animated" action="https://formspree.io/f/your-form-id" method="POST" data-aos="fade-left">
+      <h2>Send a Message 🚀</h2>
+      <input type="text" name="name" placeholder="Your Name" required />
+      <input type="email" name="email" placeholder="Your Email" required />
+      <textarea name="message" rows="6" placeholder="Type your message..." required></textarea>
+      <button type="submit" class="btn">Send Message</button>
+    </form>
+  </div>
+</section>
+
+
     </main>
+<script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 
     <footer>
         <p>&copy; 2024 Abhay Srivastava. All rights reserved.</p>
