updated contact details

--- a/contact.html
+++ b/contact.html
@@ -1,92 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Contact Abhay Srivastava">
-    <title>Contact - Abhay Srivastava</title>
-    <link rel="stylesheet" href="css/style.css">
-    <script src="js/script.js" defer></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Contact Abhay Srivastava">
+  <title>Contact - Abhay Srivastava</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+  <script src="js/script.js" defer></script>
 </head>
 <body class="dark-mode">
-    <header class="sticky">
-        <nav class="navbar">
-            <div class="logo">Abhay Srivastava</div>
-            <div class="hamburger" aria-label="Toggle menu" role="button">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
-            <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="index.html#skills">Skills</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="resume.html">Resume</a></li>
-                <li><a href="contact.html" class="active">Contact</a></li>
-            </ul>
-            <div class="dark-mode-toggle">
-                <input type="checkbox" id="dark-mode-switch" checked>
-                <label for="dark-mode-switch" aria-label="Toggle dark mode"></label>
-            </div>
-        </nav>
-    </header>
-
-    <main>
-<section class="contact-wrapper">
-  <div class="contact-intro">
-    <h1 class="typewriter">Let’s build something great together!</h1>
-    <p>I'm always open to collaboration, internships, or a good tech chat ☕</p>
-  </div>
-
-  <div class="contact-content">
-    <!-- Left Side Info -->
-    <div class="contact-info-glass" data-aos="fade-right">
-      <h2>Contact Info</h2>
-      <ul>
-        <li><i class="fas fa-envelope"></i> <a href="mailto:abhaysrivastava9@proton.me">abhaysrivastava9@proton.me</a></li>
-        <li><i class="fas fa-phone-alt"></i> <a href="tel:+919369039149">+91 9369039149</a></li>
-        <li><i class="fas fa-map-marker-alt"></i> Lucknow, India</li>
+  <header class="sticky">
+    <nav class="navbar">
+      <div class="logo">Abhay Srivastava</div>
+      <div class="hamburger" aria-label="Toggle menu" role="button">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html#skills">Skills</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="resume.html">Resume</a></li>
+        <li><a href="contact.html" class="active">Contact</a></li>
       </ul>
-      <div class="social-buttons">
-  <a href="https://linkedin.com/in/srivastavabhay" target="_blank" class="btn-social linkedin">
-    <i class="fab fa-linkedin"></i> LinkedIn
-  </a>
-  <a href="https://github.com/abhay-0912" target="_blank" class="btn-social github">
-    <i class="fab fa-github"></i> GitHub
-  </a>
-  <a href="mailto:abhaysrivastava9@proton.me" class="btn-social email">
-    <i class="fas fa-envelope"></i> Email
-  </a>
-  <a href="https://twitter.com/your_twitter" target="_blank" class="btn-social twitter">
-    <i class="fab fa-twitter"></i> Twitter
-  </a>
-  <a href="https://instagram.com/your_instagram" target="_blank" class="btn-social instagram">
-    <i class="fab fa-instagram"></i> Instagram
-  </a>
-  <a href="resume.html" class="btn-social resume">
-    <i class="fas fa-file-alt"></i> Resume
-  </a>
-</div>
+      <div class="dark-mode-toggle">
+        <input type="checkbox" id="dark-mode-switch" checked>
+        <label for="dark-mode-switch" aria-label="Toggle dark mode"></label>
+      </div>
+    </nav>
+  </header>
 
-    </div>
+  <main>
+    <section class="contact-section">
+      <div class="contact-heading">
+        <h1>Let's Build the Future Together!</h1>
+        <p>Feel free to reach out for opportunities, collaborations, or a quick tech chat ☕</p>
+      </div>
 
-    <!-- Contact Form -->
-    <form class="contact-form-animated" action="https://formspree.io/f/your-form-id" method="POST" data-aos="fade-left">
-      <h2>Send a Message 🚀</h2>
-      <input type="text" name="name" placeholder="Your Name" required />
-      <input type="email" name="email" placeholder="Your Email" required />
-      <textarea name="message" rows="6" placeholder="Type your message..." required></textarea>
-      <button type="submit" class="btn">Send Message</button>
-    </form>
-  </div>
-</section>
+      <div class="contact-container">
+        <!-- Left Panel -->
+        <div class="contact-info">
+          <img src="images/profile.jpg" alt="Abhay Srivastava" class="contact-avatar">
+          <h2>Abhay Srivastava</h2>
+          <p>B.Tech CSE | Frontend Developer | Cybersecurity Enthusiast</p>
 
+          <ul class="contact-details">
+            <li><i class="fas fa-envelope"></i> <a href="mailto:abhaysrivastava9@proton.me">abhaysrivastava9@proton.me</a></li>
+            <li><i class="fas fa-phone"></i> <a href="tel:+919369039149">+91 9369039149</a></li>
+            <li><i class="fas fa-map-marker-alt"></i> Lucknow, Uttar Pradesh, India</li>
+          </ul>
 
-    </main>
-<script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+          <div class="social-buttons">
+            <a href="https://linkedin.com/in/srivastavabhay" class="btn-social linkedin" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/abhay-0912" class="btn-social github" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://twitter.com/your_twitter" class="btn-social twitter" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="https://instagram.com/your_instagram" class="btn-social instagram" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="mailto:abhaysrivastava9@proton.me" class="btn-social email"><i class="fas fa-envelope"></i></a>
+          </div>
+        </div>
 
-    <footer>
-        <p>&copy; 2024 Abhay Srivastava. All rights reserved.</p>
-    </footer>
+        <!-- Contact Form -->
+        <form class="contact-form" action="https://formspree.io/f/your-form-id" method="POST">
+          <h2>Send a Message</h2>
+          <input type="text" name="name" placeholder="Your Name" required>
+          <input type="email" name="email" placeholder="Your Email" required>
+          <textarea name="message" rows="6" placeholder="Your Message" required></textarea>
+          <button type="submit" class="btn">Send Message</button>
+        </form>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2024 Abhay Srivastava. All rights reserved.</p>
+  </footer>
 </body>
 </html>
