--- a/resume.html
+++ b/resume.html
@@ -105,7 +105,7 @@
     </div>
 
     <div class="download-resume" data-aos="zoom-in">
-      <a href="images\ABHAYSRIVASTAVAresume.pdf" class="btn" download>
+      <a href="images\Abhay_Srivastava_Resume-1.pdf" class="btn" download>
         <i class="fas fa-download"></i> Download PDF Resume
       </a>
     </div>
